--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "WebWisdom",
+  "name": "Wordwise",
   "version": "1.0",
   "manifest_version": 2,
   "description": "Elevate your online reading experience with WebWisdom, an intelligent companion for enhanced comprehension.",
@@ -26,7 +26,7 @@
     "default_icon": {
       "48": "icons/icon.png"
     },
-    "default_title": "WebWisdom",
+    "default_title": "Wordwise",
     "default_popup": "popup/popup.html"
   },
   "web_accessible_resources": [
