--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Wordwise",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Elevate your online reading experience with WebWisdom, an intelligent companion for enhanced comprehension.",
+  "description": "Elevate your online reading experience with Wordwise, an intelligent companion for enhanced comprehension.",
   "icons": {
     "48": "icons/icon.png",
     "128": "icons/icon.png"
@@ -21,17 +21,6 @@
       ],
       "run_at": "document_idle"
     }
-  ],
-  "browser_action": {
-    "default_icon": {
-      "48": "icons/icon.png"
-    },
-    "default_title": "Wordwise",
-    "default_popup": "popup/popup.html"
-  },
-  "web_accessible_resources": [
-    "css/popup.css",
-    "locales/en/messages.json"
   ],
   "applications": {
     "gecko": {
