--- a/manifest.json
+++ b/manifest.json
@@ -2,33 +2,36 @@
   "name": "Wordwise",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Elevate your online reading experience with Wordwise, an intelligent companion for enhanced comprehension.",
+  "description": "Elevate your online reading experience with Wordwise.",
   "icons": {
     "48": "icons/icon.png",
     "128": "icons/icon.png"
   },
   "default_locale": "en",
-  "permissions": [
-    "activeTab"
-  ],
+  "permissions": ["storage", "activeTab"],
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "content/content.js"
-      ],
+      "matches": ["<all_urls>"],
+      "js": ["content/content.js"],
+      "css": ["content/content.css"],
       "run_at": "document_idle"
     }
   ],
+  "options_ui": {
+    "page": "options/options.html",
+    "browser_style": true
+  },
+  "web_accessible_resources": [
+    "css/popup.css",
+    "locales/en/messages.json"
+  ],
   "applications": {
     "gecko": {
+      "id": "your-addon-id@your-domain.com",
       "strict_min_version": "68.0"
     }
   },
   "browser_specific_settings": {
-    "gecko": {
-    }
+    "gecko": {}
   }
 }
