--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,14 @@
 {
-  "browser_specific_settings": {
-    "gecko": {}
+  "name": "Wordwise",
+  "version": "1.0",
+  "manifest_version": 2,
+  "description": "Elevate your online reading experience with Wordwise.",
+  "icons": {
+    "48": "icons/icon.png",
+    "128": "icons/icon.png"
   },
-  "background": {
-    "scripts": []
-  },
-  "browser_action": {
-    "default_icon": {
-      "19": "icons/icon.png",
-      "38": "icons/icon.png"
-    },
-    "default_title": "",
-    "default_popup": ""
-  },
-  "commands": {},
-  "content_security_policy": "",
+  "default_locale": "en",
+  "permissions": ["storage", "activeTab"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -23,22 +17,21 @@
       "run_at": "document_idle"
     }
   ],
-  "default_locale": "en",
-  "description": "Elevate your online reading experience with Wordwise.",
-  "icons": {
-    "48": "icons/icon.png",
-    "128": "icons/icon.png"
-  },
-  "manifest_version": 2,
-  "name": "Wordwise",
   "options_ui": {
     "page": "options/options.html",
     "browser_style": true
   },
-  "permissions": ["storage", "activeTab"],
-  "version": "1.0",
   "web_accessible_resources": [
     "css/popup.css",
     "locales/en/messages.json"
-  ]
+  ],
+  "applications": {
+    "gecko": {
+      "id": "your-addon-id@your-domain.com",
+      "strict_min_version": "68.0"
+    }
+  },
+  "browser_specific_settings": {
+    "gecko": {}
+  }
 }
