--- a/manifest.json
+++ b/manifest.json
@@ -33,5 +33,9 @@
   },
   "browser_specific_settings": {
     "gecko": {}
+  },
+  "background": {
+    "scripts": ["background/background.js"],
+    "persistent": false
   }
 }
