--- a/manifest.json
+++ b/manifest.json
@@ -37,5 +37,13 @@
   "background": {
     "scripts": ["background/background.js"],
     "persistent": false
+  },
+  "browser_action": {
+    "default_icon": {
+      "48": "icons/icon.png",
+      "128": "icons/icon.png"
+    },
+    "default_title": "Wordwise Toolbar",
+    "default_popup": "popup/popup.html"
   }
 }
