--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "128": "icons/icon.png"
   },
   "default_locale": "en",
-  "permissions": ["storage", "activeTab"],
+  "permissions": ["storage", "activeTab", "tabs"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
