--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "128": "icons/icon.png"
   },
   "default_locale": "en",
-  "permissions": ["storage", "activeTab", "tabs"],
+  "permissions": ["storage", "activeTab"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -21,10 +21,6 @@
     "page": "options/options.html",
     "browser_style": true
   },
-  "web_accessible_resources": [
-    "css/popup.css",
-    "locales/en/messages.json"
-  ],
   "background": {
     "scripts": ["background/background.js"],
     "persistent": false
