--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   },
   "default_locale": "en",
   "permissions": ["storage", "activeTab", "tabs"],
+  // ... (rest of your manifest)
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
