--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "128": "icons/icon.png"
   },
   "default_locale": "en",
-  "permissions": ["storage", "activeTab", "tabs"],
+  "permissions": ["storage", "activeTab", "tabs", "downloads"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -32,5 +32,14 @@
     },
     "default_title": "Wordwise Toolbar",
     "default_popup": "popup/popup.html"
+  },
+  "commands": {
+    "toggle-wordwise": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+W",
+        "mac": "MacCtrl+Shift+W"
+      },
+      "description": "Toggle Wordwise for the current page"
+    }
   }
 }
